# CDBSAnalyzer

./: CMakeLists.txt  readme.md
cmake/: version.h.in
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow2.h  mainwindow2.ui  plotwindow.cpp  plotwindow.h  plotwindow.ui  ui_mainwindow.h  ui_plotwindow.h
gui/tables/: histtable.cpp  histtable.h
gui/widgets/: mapplotwidget.cpp  mapplotwidget.h  mapplotwidget.ui  plotwidget.cpp  plotwidget.h  plotwidget2.cpp  plotwidget2.h  plotwidget2.ui
libs/hist/: histinfo.cpp  histinfo.h  histmanager.cpp  histmanager.h  mpa1dhist.cpp  mpa1dhist.h  mpa2dhist.cpp  mpa2dhist.h  mpacdbhist.cpp  mpacdbhist.h  mpahistfile.cpp  mpahistfile.h  mparefhist.cpp  mparefhist.h
libs/model/: D2GaussErfc.c  D2GaussErfc.h  D2GaussFunctionRot.c  D2GaussFunctionRot.h  D2Model.c  D2Model.h  D2Model_initialize.c  D2Model_initialize.h  D2Model_terminate.c  D2Model_terminate.h  D2Model_types.h  erfc.c  erfc.h  exp.c  exp.h  meshgrid.c  meshgrid.h  power.c  power.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
libs/pixel/: abstractpixel.cpp  abstractpixel.h  cdbpixel.cpp  cdbpixel.h  roipixel.cpp  roipixel.h
settings/: CDBSOld.ini  CDBSUpgrade.bak  CDBSUpgrade.ini  CDBSUpgrade_org.ini  CDBSUpgrade_org.ini~  test.ini  variableRoiTable.bak
test/: dbtest.cpp  fittest.cpp  hist2dtest.cpp  maptest.cpp  pixeltest.cpp
